--- a/preon/examples/drug_name_normalization.ipynb
+++ b/preon/examples/drug_name_normalization.ipynb
@@ -6,12 +6,12 @@
    "metadata": {},
    "source": [
     "# Drug Name Normalization\n",
-    "In this notebook, we evaluate our normalizer with three drug name gold standards."
+    "In this notebook, we evaluate our normalizer with three drug name gold standards and present two use cases."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "pregnant-price",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "cordless-retro",
    "metadata": {},
    "outputs": [],
@@ -30,6 +30,17 @@
     "from preon.normalization import PrecisionOncologyNormalizer\n",
     "from preon.drug import load_ebi_drugs, load_charite_drug_goldstandard, load_database_drug_goldstandard, load_ctg_drug_goldstandard\n",
     "from preon.tests.utils import f1_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "technological-isaac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import daproli as dp"
    ]
   },
   {
@@ -42,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "bright-found",
    "metadata": {},
    "outputs": [],
@@ -61,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "parental-jacket",
    "metadata": {},
    "outputs": [],
@@ -75,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "ruled-roads",
    "metadata": {},
    "outputs": [
@@ -97,12 +108,350 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "tamil-business",
+   "metadata": {},
+   "source": [
+    "# User Search\n",
+    "Going on, we demonstrate how to use preon to search for drug names."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "white-chuck",
+   "execution_count": 7,
+   "id": "tutorial-bibliography",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['avastin'], [['CHEMBL1201583']], {'match_type': 'exact'})"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalizer.query(\"Avastin\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "geographic-weekend",
+   "metadata": {},
+   "source": [
+    "We can simply search for drug names and retrieve their CHEMBL ids by quering the normalizer. As a result for our query, we get list of matching normalized drug names (in this case ['avastin']), a list of associated CHEMBL ids for every returned drug name [['CHEMBL1201583']] and some meta information about the matching {'match_type': 'exact'}. We can also search for multi-token drug names like \"Ixabepilone Epothilone B analog\" and find CHEMBL ids for the relevant tokens."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "civilian-coating",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['ixabepilone'], [['CHEMBL1201752']], {'match_type': 'substring'})"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalizer.query(\"Ixabepilone Epothilone B analog\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "numeric-mailman",
+   "metadata": {},
+   "source": [
+    "We find the relevant drug name ['ixabepilone'] and preon provides the meta information that the matching is based on a substring. On default, preon only looks for 1 matching token. It can also look for n-grams by setting the n_grams parameter in the query method. Let's take a harder example, say \"Isavuconazonium\", but misspell it as \"Isavuconaconium\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "expensive-nepal",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['isavuconazonium'],\n",
+       " [['CHEMBL1183349']],\n",
+       " {'match_type': 'partial', 'edit_distance': 0.06666666666666667})"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalizer.query(\"Isavuconaconium\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "synthetic-dominican",
+   "metadata": {},
+   "source": [
+    "preon finds the correct drug \"Isavuconazonium\" and provides the meta information that it is a partial match with 7% distance. It returns drug names with a distance smaller than 20% on default. In order to change this parameter, set the threshold argument in the query method."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "recorded-stephen",
+   "metadata": {},
+   "source": [
+    "# Data Integration\n",
+    "We use preon in the PREDICT project to integrate drug names from different sources. Going on, we provide an overview how to do so."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "former-granny",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "db_names, _ = load_database_drug_goldstandard()\n",
+    "ch_names, _ = load_ctg_drug_goldstandard()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "running-mattress",
+   "metadata": {},
+   "source": [
+    "Let's say we wanted to integrate the drug names from the database and charite gold standards. We would normalize both lists of names and join on the returned CHEMBL ids."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "paperback-forwarding",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Found Names</th>\n",
+       "      <th>Found Name IDs</th>\n",
+       "      <th>Match Type</th>\n",
+       "      <th>Edit Distance</th>\n",
+       "      <th>Query Time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Verapamil</td>\n",
+       "      <td>[verapamil]</td>\n",
+       "      <td>[[CHEMBL6966]]</td>\n",
+       "      <td>exact</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000472</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Lenalidomide</td>\n",
+       "      <td>[lenalidomide]</td>\n",
+       "      <td>[[CHEMBL848]]</td>\n",
+       "      <td>exact</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Anastrozole</td>\n",
+       "      <td>[anastrozole]</td>\n",
+       "      <td>[[CHEMBL1399]]</td>\n",
+       "      <td>exact</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Rucaparib</td>\n",
+       "      <td>[rucaparib]</td>\n",
+       "      <td>[[CHEMBL1173055]]</td>\n",
+       "      <td>exact</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bendamustine</td>\n",
+       "      <td>[bendamustine]</td>\n",
+       "      <td>[[CHEMBL487253]]</td>\n",
+       "      <td>exact</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000370</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>tofacitinib</td>\n",
+       "      <td>[tofacitinib]</td>\n",
+       "      <td>[[CHEMBL221959]]</td>\n",
+       "      <td>exact</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000084</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>APR-246</td>\n",
+       "      <td>[apr246]</td>\n",
+       "      <td>[[CHEMBL3186011]]</td>\n",
+       "      <td>exact</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>kevetrin</td>\n",
+       "      <td>[kevetrin]</td>\n",
+       "      <td>[[CHEMBL4297540]]</td>\n",
+       "      <td>exact</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>TDM1</td>\n",
+       "      <td>[tdm1]</td>\n",
+       "      <td>[[CHEMBL2109399]]</td>\n",
+       "      <td>exact</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>Dasatinib</td>\n",
+       "      <td>[dasatinib]</td>\n",
+       "      <td>[[CHEMBL1421]]</td>\n",
+       "      <td>exact</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000028</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>76 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Name     Found Names     Found Name IDs Match Type  Edit Distance  \\\n",
+       "0      Verapamil     [verapamil]     [[CHEMBL6966]]      exact            NaN   \n",
+       "1   Lenalidomide  [lenalidomide]      [[CHEMBL848]]      exact            NaN   \n",
+       "2    Anastrozole   [anastrozole]     [[CHEMBL1399]]      exact            NaN   \n",
+       "3      Rucaparib     [rucaparib]  [[CHEMBL1173055]]      exact            NaN   \n",
+       "4   Bendamustine  [bendamustine]   [[CHEMBL487253]]      exact            NaN   \n",
+       "..           ...             ...                ...        ...            ...   \n",
+       "71   tofacitinib   [tofacitinib]   [[CHEMBL221959]]      exact            NaN   \n",
+       "72       APR-246        [apr246]  [[CHEMBL3186011]]      exact            NaN   \n",
+       "73      kevetrin      [kevetrin]  [[CHEMBL4297540]]      exact            NaN   \n",
+       "74          TDM1          [tdm1]  [[CHEMBL2109399]]      exact            NaN   \n",
+       "75     Dasatinib     [dasatinib]     [[CHEMBL1421]]      exact            NaN   \n",
+       "\n",
+       "    Query Time  \n",
+       "0     0.000472  \n",
+       "1     0.000200  \n",
+       "2     0.000360  \n",
+       "3     0.000245  \n",
+       "4     0.000370  \n",
+       "..         ...  \n",
+       "71    0.000084  \n",
+       "72    0.000037  \n",
+       "73    0.000028  \n",
+       "74    0.000028  \n",
+       "75    0.000028  \n",
+       "\n",
+       "[76 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalizer.transform(db_names)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ceramic-quilt",
+   "metadata": {},
+   "source": [
+    "Using the transform method, preon returns a comprehensive pandas dataframe that contains the corresponding annotations. Let's normalize the drug names from both gold standards."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "scheduled-accused",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db_df = normalizer.transform(db_names)\n",
+    "db_df[\"Found Name IDs\"] = db_df[\"Found Name IDs\"].apply(dp.flatten).apply(lambda ids: ids[0])\n",
+    "\n",
+    "ch_df = normalizer.transform(ch_names)\n",
+    "ch_df[\"Found Name IDs\"] = ch_df[\"Found Name IDs\"].apply(dp.flatten).apply(lambda ids: ids[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "compound-persian",
+   "metadata": {},
+   "source": [
+    "We can now extract and relate the query drug names with the found CHEMBL ids from both sources. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "sixth-clear",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db_names, db_ids = db_df.Name.tolist(), db_df[\"Found Name IDs\"].tolist()\n",
+    "ch_names, ch_ids = ch_df.Name.tolist(), ch_df[\"Found Name IDs\"].tolist()"
+   ]
   }
  ],
  "metadata": {
