--- a/preon/examples/drug_name_normalization.ipynb
+++ b/preon/examples/drug_name_normalization.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "pregnant-price",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "cordless-retro",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "technological-isaac",
    "metadata": {},
    "outputs": [],
@@ -94,15 +94,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "charite: f1_score=0.9144050104384134\n",
-      "database: f1_score=0.9496402877697843\n",
-      "ctg: f1_score=0.9397590361445782\n"
+      "charite: f1_score=0.918918918918919\n",
+      "database: f1_score=0.935251798561151\n",
+      "ctg: f1_score=0.9341317365269461\n"
      ]
     }
    ],
    "source": [
     "for dataset_name, load_dataset in goldstandards:\n",
-    "    drug_names, chembl_ids = load_dataset()\n",
+    "    drug_names, chembl_ids, _ = load_dataset()\n",
     "    df_eval = normalizer.evaluate(drug_names, chembl_ids)\n",
     "    print(f\"{dataset_name}: f1_score={f1_score(df_eval)}\")"
    ]
@@ -124,9 +124,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "(['avastin'], [['CHEMBL1201583']], {'match_type': 'exact'})"
-      ]
+      "text/plain": "(['avastin'], [['CHEMBL1201583']], {'match_type': 'exact'})"
      },
      "execution_count": 7,
      "metadata": {},
@@ -147,17 +145,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "civilian-coating",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "(['ixabepilone'], [['CHEMBL1201752']], {'match_type': 'substring'})"
-      ]
+      "text/plain": "(['ixabepilone'], [['CHEMBL1201752']], {'match_type': 'substring'})"
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,19 +172,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "expensive-nepal",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "(['isavuconazonium'],\n",
-       " [['CHEMBL1183349']],\n",
-       " {'match_type': 'partial', 'edit_distance': 0.06666666666666667})"
-      ]
+      "text/plain": "(['isavuconazonium'],\n [['CHEMBL1183349']],\n {'match_type': 'partial', 'edit_distance': 0.06666666666666667})"
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,13 +208,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "former-granny",
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_names, _ = load_database_drug_goldstandard()\n",
-    "ch_names, _ = load_ctg_drug_goldstandard()"
+    "db_names, _, _ = load_database_drug_goldstandard()\n",
+    "ch_names, _, _ = load_ctg_drug_goldstandard()"
    ]
   },
   {
@@ -235,175 +227,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "paperback-forwarding",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Found Names</th>\n",
-       "      <th>Found Name IDs</th>\n",
-       "      <th>Match Type</th>\n",
-       "      <th>Edit Distance</th>\n",
-       "      <th>Query Time</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Verapamil</td>\n",
-       "      <td>[verapamil]</td>\n",
-       "      <td>[[CHEMBL6966]]</td>\n",
-       "      <td>exact</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000472</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Lenalidomide</td>\n",
-       "      <td>[lenalidomide]</td>\n",
-       "      <td>[[CHEMBL848]]</td>\n",
-       "      <td>exact</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Anastrozole</td>\n",
-       "      <td>[anastrozole]</td>\n",
-       "      <td>[[CHEMBL1399]]</td>\n",
-       "      <td>exact</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000360</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Rucaparib</td>\n",
-       "      <td>[rucaparib]</td>\n",
-       "      <td>[[CHEMBL1173055]]</td>\n",
-       "      <td>exact</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000245</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Bendamustine</td>\n",
-       "      <td>[bendamustine]</td>\n",
-       "      <td>[[CHEMBL487253]]</td>\n",
-       "      <td>exact</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000370</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>71</th>\n",
-       "      <td>tofacitinib</td>\n",
-       "      <td>[tofacitinib]</td>\n",
-       "      <td>[[CHEMBL221959]]</td>\n",
-       "      <td>exact</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000084</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>72</th>\n",
-       "      <td>APR-246</td>\n",
-       "      <td>[apr246]</td>\n",
-       "      <td>[[CHEMBL3186011]]</td>\n",
-       "      <td>exact</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000037</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>73</th>\n",
-       "      <td>kevetrin</td>\n",
-       "      <td>[kevetrin]</td>\n",
-       "      <td>[[CHEMBL4297540]]</td>\n",
-       "      <td>exact</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000028</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>74</th>\n",
-       "      <td>TDM1</td>\n",
-       "      <td>[tdm1]</td>\n",
-       "      <td>[[CHEMBL2109399]]</td>\n",
-       "      <td>exact</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000028</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75</th>\n",
-       "      <td>Dasatinib</td>\n",
-       "      <td>[dasatinib]</td>\n",
-       "      <td>[[CHEMBL1421]]</td>\n",
-       "      <td>exact</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000028</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>76 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Name     Found Names     Found Name IDs Match Type  Edit Distance  \\\n",
-       "0      Verapamil     [verapamil]     [[CHEMBL6966]]      exact            NaN   \n",
-       "1   Lenalidomide  [lenalidomide]      [[CHEMBL848]]      exact            NaN   \n",
-       "2    Anastrozole   [anastrozole]     [[CHEMBL1399]]      exact            NaN   \n",
-       "3      Rucaparib     [rucaparib]  [[CHEMBL1173055]]      exact            NaN   \n",
-       "4   Bendamustine  [bendamustine]   [[CHEMBL487253]]      exact            NaN   \n",
-       "..           ...             ...                ...        ...            ...   \n",
-       "71   tofacitinib   [tofacitinib]   [[CHEMBL221959]]      exact            NaN   \n",
-       "72       APR-246        [apr246]  [[CHEMBL3186011]]      exact            NaN   \n",
-       "73      kevetrin      [kevetrin]  [[CHEMBL4297540]]      exact            NaN   \n",
-       "74          TDM1          [tdm1]  [[CHEMBL2109399]]      exact            NaN   \n",
-       "75     Dasatinib     [dasatinib]     [[CHEMBL1421]]      exact            NaN   \n",
-       "\n",
-       "    Query Time  \n",
-       "0     0.000472  \n",
-       "1     0.000200  \n",
-       "2     0.000360  \n",
-       "3     0.000245  \n",
-       "4     0.000370  \n",
-       "..         ...  \n",
-       "71    0.000084  \n",
-       "72    0.000037  \n",
-       "73    0.000028  \n",
-       "74    0.000028  \n",
-       "75    0.000028  \n",
-       "\n",
-       "[76 rows x 6 columns]"
-      ]
+      "text/plain": "                    Name     Found Names     Found Name IDs Match Type  \\\n0               LOXO-292       [loxo292]  [[CHEMBL4559134]]      exact   \n1               H3B-8800       [h3b8800]  [[CHEMBL4802174]]      exact   \n2               Tubulins              []           [[None]]       none   \n3   Androgen Deprivation              []           [[None]]       none   \n4              Mitomycin     [mitomycin]      [[CHEMBL105]]      exact   \n..                   ...             ...                ...        ...   \n71           Thioguanine   [thioguanine]      [[CHEMBL727]]      exact   \n72          Lenalidomide  [lenalidomide]      [[CHEMBL848]]      exact   \n73           Gemcitabine   [gemcitabine]      [[CHEMBL888]]      exact   \n74             Gefitinib     [gefitinib]      [[CHEMBL939]]      exact   \n75              Imatinib      [imatinib]      [[CHEMBL941]]      exact   \n\n    Edit Distance  Query Time  \n0             NaN    0.000140  \n1             NaN    0.000083  \n2             NaN    0.113431  \n3             NaN    0.131318  \n4             NaN    0.000087  \n..            ...         ...  \n71            NaN    0.000021  \n72            NaN    0.000021  \n73            NaN    0.000022  \n74            NaN    0.000020  \n75            NaN    0.000022  \n\n[76 rows x 6 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Name</th>\n      <th>Found Names</th>\n      <th>Found Name IDs</th>\n      <th>Match Type</th>\n      <th>Edit Distance</th>\n      <th>Query Time</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>LOXO-292</td>\n      <td>[loxo292]</td>\n      <td>[[CHEMBL4559134]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000140</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>H3B-8800</td>\n      <td>[h3b8800]</td>\n      <td>[[CHEMBL4802174]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000083</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Tubulins</td>\n      <td>[]</td>\n      <td>[[None]]</td>\n      <td>none</td>\n      <td>NaN</td>\n      <td>0.113431</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Androgen Deprivation</td>\n      <td>[]</td>\n      <td>[[None]]</td>\n      <td>none</td>\n      <td>NaN</td>\n      <td>0.131318</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Mitomycin</td>\n      <td>[mitomycin]</td>\n      <td>[[CHEMBL105]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000087</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>71</th>\n      <td>Thioguanine</td>\n      <td>[thioguanine]</td>\n      <td>[[CHEMBL727]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000021</td>\n    </tr>\n    <tr>\n      <th>72</th>\n      <td>Lenalidomide</td>\n      <td>[lenalidomide]</td>\n      <td>[[CHEMBL848]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000021</td>\n    </tr>\n    <tr>\n      <th>73</th>\n      <td>Gemcitabine</td>\n      <td>[gemcitabine]</td>\n      <td>[[CHEMBL888]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000022</td>\n    </tr>\n    <tr>\n      <th>74</th>\n      <td>Gefitinib</td>\n      <td>[gefitinib]</td>\n      <td>[[CHEMBL939]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000020</td>\n    </tr>\n    <tr>\n      <th>75</th>\n      <td>Imatinib</td>\n      <td>[imatinib]</td>\n      <td>[[CHEMBL941]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000022</td>\n    </tr>\n  </tbody>\n</table>\n<p>76 rows × 6 columns</p>\n</div>"
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "id": "scheduled-accused",
    "metadata": {},
    "outputs": [],
@@ -444,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "id": "sixth-clear",
    "metadata": {},
    "outputs": [],
