--- a/preon/examples/drug_name_normalization.ipynb
+++ b/preon/examples/drug_name_normalization.ipynb
@@ -124,7 +124,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "(['avastin'], [['CHEMBL1201583']], {'match_type': 'exact'})"
+      "text/plain": [
+       "(['avastin'], [['CHEMBL1201583']], {'match_type': 'exact'})"
+      ]
      },
      "execution_count": 7,
      "metadata": {},
@@ -151,7 +153,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "(['ixabepilone'], [['CHEMBL1201752']], {'match_type': 'substring'})"
+      "text/plain": [
+       "(['ixabepilone'], [['CHEMBL1201752']], {'match_type': 'substring'})"
+      ]
      },
      "execution_count": 8,
      "metadata": {},
@@ -178,7 +182,11 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "(['isavuconazonium'],\n [['CHEMBL1183349']],\n {'match_type': 'partial', 'edit_distance': 0.06666666666666667})"
+      "text/plain": [
+       "(['isavuconazonium'],\n",
+       " [['CHEMBL1183349']],\n",
+       " {'match_type': 'partial', 'edit_distance': 0.06666666666666667})"
+      ]
      },
      "execution_count": 9,
      "metadata": {},
@@ -233,8 +241,167 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "                    Name     Found Names     Found Name IDs Match Type  \\\n0               LOXO-292       [loxo292]  [[CHEMBL4559134]]      exact   \n1               H3B-8800       [h3b8800]  [[CHEMBL4802174]]      exact   \n2               Tubulins              []           [[None]]       none   \n3   Androgen Deprivation              []           [[None]]       none   \n4              Mitomycin     [mitomycin]      [[CHEMBL105]]      exact   \n..                   ...             ...                ...        ...   \n71           Thioguanine   [thioguanine]      [[CHEMBL727]]      exact   \n72          Lenalidomide  [lenalidomide]      [[CHEMBL848]]      exact   \n73           Gemcitabine   [gemcitabine]      [[CHEMBL888]]      exact   \n74             Gefitinib     [gefitinib]      [[CHEMBL939]]      exact   \n75              Imatinib      [imatinib]      [[CHEMBL941]]      exact   \n\n    Edit Distance  Query Time  \n0             NaN    0.000140  \n1             NaN    0.000083  \n2             NaN    0.113431  \n3             NaN    0.131318  \n4             NaN    0.000087  \n..            ...         ...  \n71            NaN    0.000021  \n72            NaN    0.000021  \n73            NaN    0.000022  \n74            NaN    0.000020  \n75            NaN    0.000022  \n\n[76 rows x 6 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Name</th>\n      <th>Found Names</th>\n      <th>Found Name IDs</th>\n      <th>Match Type</th>\n      <th>Edit Distance</th>\n      <th>Query Time</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>LOXO-292</td>\n      <td>[loxo292]</td>\n      <td>[[CHEMBL4559134]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000140</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>H3B-8800</td>\n      <td>[h3b8800]</td>\n      <td>[[CHEMBL4802174]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000083</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Tubulins</td>\n      <td>[]</td>\n      <td>[[None]]</td>\n      <td>none</td>\n      <td>NaN</td>\n      <td>0.113431</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Androgen Deprivation</td>\n      <td>[]</td>\n      <td>[[None]]</td>\n      <td>none</td>\n      <td>NaN</td>\n      <td>0.131318</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Mitomycin</td>\n      <td>[mitomycin]</td>\n      <td>[[CHEMBL105]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000087</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>71</th>\n      <td>Thioguanine</td>\n      <td>[thioguanine]</td>\n      <td>[[CHEMBL727]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000021</td>\n    </tr>\n    <tr>\n      <th>72</th>\n      <td>Lenalidomide</td>\n      <td>[lenalidomide]</td>\n      <td>[[CHEMBL848]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000021</td>\n    </tr>\n    <tr>\n      <th>73</th>\n      <td>Gemcitabine</td>\n      <td>[gemcitabine]</td>\n      <td>[[CHEMBL888]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000022</td>\n    </tr>\n    <tr>\n      <th>74</th>\n      <td>Gefitinib</td>\n      <td>[gefitinib]</td>\n      <td>[[CHEMBL939]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000020</td>\n    </tr>\n    <tr>\n      <th>75</th>\n      <td>Imatinib</td>\n      <td>[imatinib]</td>\n      <td>[[CHEMBL941]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000022</td>\n    </tr>\n  </tbody>\n</table>\n<p>76 rows × 6 columns</p>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Found Names</th>\n",
+       "      <th>Found Name IDs</th>\n",
+       "      <th>Match Type</th>\n",
+       "      <th>Edit Distance</th>\n",
+       "      <th>Query Time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LOXO-292</td>\n",
+       "      <td>[loxo292]</td>\n",
+       "      <td>[[CHEMBL4559134]]</td>\n",
+       "      <td>exact</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>H3B-8800</td>\n",
+       "      <td>[h3b8800]</td>\n",
+       "      <td>[[CHEMBL4802174]]</td>\n",
+       "      <td>exact</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Tubulins</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[[None]]</td>\n",
+       "      <td>none</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.113431</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Androgen Deprivation</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[[None]]</td>\n",
+       "      <td>none</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.131318</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Mitomycin</td>\n",
+       "      <td>[mitomycin]</td>\n",
+       "      <td>[[CHEMBL105]]</td>\n",
+       "      <td>exact</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>Thioguanine</td>\n",
+       "      <td>[thioguanine]</td>\n",
+       "      <td>[[CHEMBL727]]</td>\n",
+       "      <td>exact</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>Lenalidomide</td>\n",
+       "      <td>[lenalidomide]</td>\n",
+       "      <td>[[CHEMBL848]]</td>\n",
+       "      <td>exact</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>Gemcitabine</td>\n",
+       "      <td>[gemcitabine]</td>\n",
+       "      <td>[[CHEMBL888]]</td>\n",
+       "      <td>exact</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>Gefitinib</td>\n",
+       "      <td>[gefitinib]</td>\n",
+       "      <td>[[CHEMBL939]]</td>\n",
+       "      <td>exact</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>Imatinib</td>\n",
+       "      <td>[imatinib]</td>\n",
+       "      <td>[[CHEMBL941]]</td>\n",
+       "      <td>exact</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000022</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>76 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Name     Found Names     Found Name IDs Match Type  \\\n",
+       "0               LOXO-292       [loxo292]  [[CHEMBL4559134]]      exact   \n",
+       "1               H3B-8800       [h3b8800]  [[CHEMBL4802174]]      exact   \n",
+       "2               Tubulins              []           [[None]]       none   \n",
+       "3   Androgen Deprivation              []           [[None]]       none   \n",
+       "4              Mitomycin     [mitomycin]      [[CHEMBL105]]      exact   \n",
+       "..                   ...             ...                ...        ...   \n",
+       "71           Thioguanine   [thioguanine]      [[CHEMBL727]]      exact   \n",
+       "72          Lenalidomide  [lenalidomide]      [[CHEMBL848]]      exact   \n",
+       "73           Gemcitabine   [gemcitabine]      [[CHEMBL888]]      exact   \n",
+       "74             Gefitinib     [gefitinib]      [[CHEMBL939]]      exact   \n",
+       "75              Imatinib      [imatinib]      [[CHEMBL941]]      exact   \n",
+       "\n",
+       "    Edit Distance  Query Time  \n",
+       "0             NaN    0.000140  \n",
+       "1             NaN    0.000083  \n",
+       "2             NaN    0.113431  \n",
+       "3             NaN    0.131318  \n",
+       "4             NaN    0.000087  \n",
+       "..            ...         ...  \n",
+       "71            NaN    0.000021  \n",
+       "72            NaN    0.000021  \n",
+       "73            NaN    0.000022  \n",
+       "74            NaN    0.000020  \n",
+       "75            NaN    0.000022  \n",
+       "\n",
+       "[76 rows x 6 columns]"
+      ]
      },
      "execution_count": 11,
      "metadata": {},
@@ -289,7 +456,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -303,7 +470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
